# chironpy

./: .dockerignore  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: claude.yml  lint.yml  publish.yml  publishdocs.yml  publishtestpypi.yml  test.yml
CONTRIBUTING/: index.html
Example/: index.html
api_reference/: index.html
changelog/: index.html
chiron/: pandas.py
chiron/examples/: utils.py
chiron/io/: fit.py  gpx.py  local_strava.py  models.py  strava.py  tcx.py
chironpy/: __init__.py  constants.py  pandas.py  utils.py
chironpy/examples/: index.yml  utils.py
chironpy/examples/data/: 18360138543_ACTIVITY_Osaka_Marathon_2025.fit  74d893f7-1349-4b2c-ac5f-60246396b8b1_local_strava_Osaka_Marathon_2025.json  strava_17497731832_warm_up.json  strava_17497955000_track_workout.json  strava_17498168651_warm_down.json
chironpy/io/: local_strava.py  models.py  strava.py  tcx.py  utils.py
chironpy/metrics/: core.py  power.py  vert.py
chironpy/models/: workout.py
chironpy/pdm/: w_prime_balance.py
contributing/: index.html
docker/: Dockerfile.jupyter  Dockerfile.lint  Dockerfile.mkdocs  Dockerfile.test  docker-compose.docs.yml  docker-compose.lint.yml  docker-compose.test.yml
docs/: api_reference.md  changelog.md  index.md  mkdocs.yml
docs/docs/: CNAME  changelog.md  contributing.md  index.md
docs/docs/features/: Metrics.ipynb  Power duration modelling.ipynb  data_loading.md  example_data.md  nomenclature.md  running_metrics.md
docs/features/: Metrics.ipynb  data_loading.md  merge_workouts.ipynb
docs/legacy/: Metrics.ipynb  example_data.md  nomenclature.md
examples/: get_metrics.py  get_workout.py  load_files.py
features/Metrics/: index.html
features/Power duration modelling/: index.html
features/data_loading/: index.html
features/example_data/: index.html
features/merge_workouts/: index.html
features/nomenclature/: index.html
features/running_metrics/: index.html
lab/: getting_started.ipynb  osaka_marathon.ipynb
legacy/Metrics/: index.html
legacy/Power duration modelling/: index.html
legacy/data_loading/: index.html
legacy/example_data/: index.html
legacy/nomenclature/: index.html
scripts/: get_metrics.py  get_workout.py  load_files.py
sweat/examples/: index.yml  utils.py
sweat/examples/data/: 8eb40499-450a-436e-adac-c3ba95bf1834_local_strava.json
sweat/io/: local_strava.py
tests/: conftest.py  test_merge_workouts.py  test_pandas.py  test_utils.py  test_workout.py
tests/examples/: test_utils.py
tests/hrm/: test_heartrate_models.py
tests/io/: test_fit.py  test_generic.py  test_gpx.py  test_local_strava.py  test_strava.py  test_tcx.py  test_utils.py  utils.py
tests/metrics/: test_core.py  test_power.py  test_speed.py  test_vert.py
tests/pdm/: test_regressors.py  test_w_prime_balance.py
