[tool.poetry]
name = "chironpy"
version = "0.29.0"
description = "Workout analysis"
license = "MIT"
authors = ["Clive Gross <clive@chironapp.com>"]
readme = "README.md"
homepage = "https://chironapp.github.io/chironpy/"
repository = "https://github.com/chironapp/chironpy"
documentation = "https://chironapp.github.io/chironpy/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
fitparse = "^1.2.0"
lmfit = "^1.3.0"
scipy = "^1.13.0"
pandas = "^2.0.0"
requests = "^2.32.0"
pydantic = "^2.0"
pyyaml = "^6.0.0"
scikit-learn = "^1.3.0"
stravalib = "^2.0.0"
matplotlib = "^3.8.0"
numpy = "^1.24.0"
mkdocs-material = {extras = ["icons"], version = "^9.6.12"}

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = ">=6.2.4,<8.0.0"
mkdocs = "*"
mkdocs-material = "*"
mknotebooks = "*"
openpyxl = "^3.0.7"
typing-extensions = "^4.12.2"
vcrpy = "^6.0.2"
jupyterlab = "*"
ipykernel = "*"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py311,py312,py313,py314

[testenv]
whitelist_externals = poetry
passenv = PYTHONDONTWRITEBYTECODE
commands =
    # About the --no-root flag: https://github.com/python-poetry/poetry/issues/1204
    poetry install -v --no-root
    poetry run pytest tests/ {posargs}
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
