[project]
name = "chironpy"
version = "0.30.0"
description = "Workout analysis"
license = { text = "MIT" }
authors = [{ name = "Clive Gross", email = "clive@chironapp.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fitparse>=1.2.0,<2",
    "lmfit>=1.3.0,<2",
    "scipy>=1.13.0,<2",
    "pandas>=2.0.0,<3",
    "pydantic>=2.0,<3",
    "pyyaml>=6.0.0,<7",
    "scikit-learn>=1.3.0,<2",
    "stravalib>=2.0.0,<3",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://chironpy.chironapp.com"
Repository = "https://github.com/chironapp/chironpy"
Documentation = "https://chironpy.chironapp.com"

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "pytest>=6.2.4,<8",
    "matplotlib>=3.8.0,<4",
    "openpyxl>=3.0.7,<4",
    "typing-extensions>=4.12.2,<5",
    "vcrpy>=6.0.2,<7",
    "jupyterlab",
    "ipykernel",
]
docs = [
    "mkdocs",
    "mkdocs-material>=9.6.12,<10",
    "mknotebooks",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chironpy"]

[tool.ruff]
line-length = 88

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py311,py312,py313,py314

[testenv]
commands =
    uv run pytest tests/ {posargs}
"""

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:fitparse",
]
